--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -52,12 +52,26 @@
       <div class= "container">
         <div class="row">
           <h3>
-            <% if @interaction && @interaction.errors.any? %>
+            <% if @update %>
+              <ul>
+                <li>
+                  Records updated
+                </li>
+              </ul>
+            <% elsif @interaction && @interaction.errors.any? %>
               <div>
                 <ul>
                   <% @interaction.errors.full_messages.each do |message| %>
-                    <li><%= message %></li>
+                    <li style="margin-bottom: 50px;" class="text-center"><%= message %></li>
                   <% end %>
+                </ul>
+              </div>
+            <% elsif @interacted %>
+              <div>
+                <ul>
+                  <li style="margin-bottom: 50px;" class="text-center">
+                    Interaction added
+                  </li>
                 </ul>
               </div>
             <% end %>
@@ -161,8 +175,18 @@
         </section>
     <div class="widget widget_categories" id="categories-3" style="position: center">
       
-
-      <% if session[:vid] %>
+      <% if session[:fid] %>
+        <form action = " /volunteer_patient_page" method = "post" >
+          <input type="hidden" name="_method" value="put"> 
+          <h3>Request:</h3>
+          <textarea type= "text" name = "request" rows = "6" cols = "40" ><%= @patient.request %></textarea>
+          <input type= "hidden" value=<%= @patient.id %> name = "id">
+          <div>
+             <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
+             <input class="btn btn-primary" type= "submit" name= "submit" > 
+          </div> 
+        </form> 
+      <% elsif session[:vid] %>
         <form action = " /volunteer_patient_page" method = "post" > 
           <h3> Observation and comments</h3>
           <textarea type= "text" style="margin-bottom: 10px;" name = "observation" rows = "6" cols = "40" >  </textarea>
@@ -184,17 +208,6 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
               <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
         </div>  
-      <% elsif session[:fid] %>
-        <form action = " /volunteer_patient_page" method = "post" >
-          <input type="hidden" name="_method" value="put"> 
-          <h3>Request:</h3>
-          <textarea type= "text" name = "request" rows = "6" cols = "40" ><%= @patient.request %></textarea>
-          <input type= "hidden" value=<%= @patient.id %> name = "id">
-          <div>
-             <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
-             <input class="btn btn-primary" type= "submit" name= "submit" > 
-          </div> 
-        </form> 
       <% elsif session[:sid] %>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
               <a href="/enduser" class="btn btn-primary">Back to list of patients</a>
