Fixed layout with patient page.

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -54,7 +54,7 @@
           <h3>
             <% if @update %>
               <ul>
-                <li>
+                <li style="margin-bottom: 50px;">
                   Records updated
                 </li>
               </ul>
