--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -65,12 +65,12 @@
           </main>
           <!-- <aside class="col-md-3 "> -->
           <div class="widget widget_categories" id="categories-3">               
-            <h4><div class="text-center">My Patients: </div></h4>
+            <h4><div class="text-center">My Patients (Today's total walking time): </div></h4>
             <div class="text-center">
               <ul>
                 <% @staff.patients.each do |patient| %>
                   <li class="cat-item cat-item-4">
-                    <a href="/enduser2/<%= patient.id %> " title="View all posts filed under Data"><%="#{patient.first_name} #{patient.last_name} "%></a> 
+                    <a href="/enduser2/<%= patient.id %> " title="View all posts filed under Data"><%="#{patient.first_name} #{patient.last_name}   (#{patient.todays_walking_time} min)"%></a> 
                   </li>
                 <% end %>
               </ul>
