Added bio and modified heights.

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -51,9 +51,9 @@
       <div class= "container">
         <div class= "row">
           <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "doctor-meta">
+            <div style="height: 375px;" class= "doctor-meta">
               <div class= "doctor-img">
-                <img class= "img-responsive center-block" src="assets/img/doctor1.jpg" alt="">
+                <img class= "img-responsive center-block" src="assets/img/ea.jpg" alt="">
               </div>
               <div class= "doctor-info">
 
@@ -72,7 +72,7 @@
                 <div class= "row">
                   <div class= "doctor-des text-center">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+                      Ebonku Abaku, is an avid reader and technology enthusiast that loves soccer and learning new ideas
                     </p>
                   </div>
                 </div>
@@ -97,9 +97,9 @@
             </div>
           </div>
           <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "doctor-meta">
+            <div style="height: 375px;" class= "doctor-meta">
               <div class= "doctor-img">
-                <img class= "img-responsive center-block" src="assets/img/doctor2.jpg" alt="">
+                <img class= "img-responsive center-block" src="assets/img/cj.jpg" alt="">
               </div>
               <div class= "doctor-info">
                 <div class= "row">
@@ -115,7 +115,7 @@
                 <div class= "row">
                   <div class= "doctor-des text-center">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+                      Chris is noob at this stuff but is picking it up quickly!!
                     </p>
                   </div>
                 </div>
@@ -140,9 +140,9 @@
             </div>
           </div>
           <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "doctor-meta">
+            <div style="height: 375px;" class= "doctor-meta">
               <div class= "doctor-img">
-                <img class= "img-responsive center-block" src="assets/img/doctor3.jpg" alt="">
+                <img class= "img-responsive center-block" src="assets/img/ny.jpg" alt="">
               </div>
               <div class= "doctor-info">
                 <div class= "row">
@@ -158,7 +158,7 @@
                 <div class= "row">
                   <div class= "doctor-des text-center">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+                      Passionate about integrating technology with our health care system to better serve our aging population.
                     </p>
                   </div>
                 </div>
@@ -185,89 +185,7 @@
       </div>
     </section>
 
-    <section id="job">
-      <div class= "job-wrapper">
-        <div class="container">
-              <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <h2 style= "text-align: right;">Want To Join Our Team ???</h2>
-                    <h4 style= "text-align: right;">
-                      We are looking for qualified professionals who are passionate about their job. Send us your CV to the email address specified below
-                    </h4>
-
-                    <!--  form for job  -->
-
-              <div class= "form">
-                <div class="input-group margin-bottom-sm">
-                    <span class="input-group-addon">
-                      <i class="fa fa-user fa-fw"></i>
-                    </span>
-                  <input class="form-control" type="text" placeholder="Name">
-                </div>
-                <div class="input-group margin-bottom-sm">
-                    <span class="input-group-addon">
-                      <i class="fa fa-envelope-o fa-fw"></i>
-                    </span>
-                  <input class="form-control" type="text" placeholder="Email address">
-                </div>
-                <div class="input-group margin-bottom-sm">
-                    <span class="input-group-addon">
-                      <i class="fa fa-tags fa-fw"></i>
-                    </span>
-                  <input type="file" class="btn btn-info form-control">
-                </div>
-              </div>
-              <button type="button" class="btn btn-primary send">Send</button>
-
-              <!-- end of form -->
-                    
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                  <div class="block-image background-scale">
-                      <img class="img-responsive center-block" src="assets/img/join.png" alt="">
-                    </div>
-                </div>
-              </div> 
-          </div>
-      </div>
-      </section>
-
-
-      <section id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <ul class="text-center contact">
-                  <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Facebook" class="facebook"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Twitter" class="twitter"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Google +" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Instagram" class="instagram"><i class="fa fa-instagram"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Pinterest" class="pinterest"><i class="fa fa-pinterest"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Connect with Skype" class="skype"><i class="fa fa-skype"></i></a>
-              </li>
-                </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="copy-right-text text-center">
-              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+ 
 
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>
