Added pictures to team.

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,22 @@
  <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="img/season-change.jpg" type="image/x-icon">
+  <title>Mediliza Homepage</title>
+
+    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700' rel='stylesheet' type='text/css'> -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600' rel='stylesheet' type='text/css'>
     
-  </head>
+
+  <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+</head>
 
   <body>
     <section class= "navs">
@@ -36,7 +52,7 @@
       </nav>
     </section>
 
-    <section class= "starting-text">
+    <section class= "blog-title text-center">
       <div class="container">
         <div class="row">
           <div style="padding-bottom: 0px;" class="welcome">
@@ -185,7 +201,17 @@
       </div>
     </section>
 
- 
+     <section id="footer" style="margin-top: 100px;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copy-right-text text-center">
+              &copy; Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>
