Formated bio heights.

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -87,7 +87,7 @@
 
                 <div class= "row">
                   <div class= "doctor-des text-center">
-                    <p>
+                    <p style="height: 100px;">
                       Ebonku Abaku, is an avid reader and technology enthusiast that loves soccer and learning new ideas
                     </p>
                   </div>
@@ -97,13 +97,7 @@
                   <div class="doctor-social text-center">
                     <ul class="contact">
                       <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Facebook"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Connect with Skype"><i class="fa fa-skype"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Google +"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://ca.linkedin.com/in/ebonkuabaku" data-toggle="tooltip" title="Share in LinkedIn"><i class="fa fa-linkedin"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -130,7 +124,7 @@
                 </div>
                 <div class= "row">
                   <div class= "doctor-des text-center">
-                    <p>
+                    <p style="height: 100px;">
                       Chris is noob at this stuff but is picking it up quickly!!
                     </p>
                   </div>
@@ -140,13 +134,7 @@
                   <div class="doctor-social text-center">
                     <ul class="contact">
                       <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Facebook"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Connect with Skype"><i class="fa fa-skype"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Google +"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://ca.linkedin.com/in/chris-jackson-03120221" data-toggle="tooltip" title="Share in LinkedIn"><i class="fa fa-linkedin"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -173,7 +161,7 @@
                 </div>
                 <div class= "row">
                   <div class= "doctor-des text-center">
-                    <p>
+                    <p style="height: 100px;">
                       Passionate about integrating technology with our health care system to better serve our aging population.
                     </p>
                   </div>
@@ -183,13 +171,7 @@
                   <div class="doctor-social text-center">
                     <ul class="contact">
                       <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Facebook"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Connect with Skype"><i class="fa fa-skype"></i></a>
-                      </li>
-                      <li class="online-contact">
-                        <a href="#" data-toggle="tooltip" title="Share in Google +"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.linkedin.com/in/njsyee" data-toggle="tooltip" title="Share in LinkedIn"><i class="fa fa-linkedin"></i></a>
                       </li>
                     </ul>
                   </div>
