--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -47,6 +47,7 @@
                <li><a href="/volunteer_home_page">Volunteers</a></li>
                <li><a href="/enduser">Nurses</a></li>
                <li><a href="/search/?">Family</a></li>
+               <li><a href="/team">Team</a></li>
                 <% if session[:vid] %>
                   <li><a href="/logout">Logout</a></li>
                 <% end %>
