Fixed search dropdown.

--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -25,7 +25,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/volunteer_home_page">Volunteers</a></li>
                 <li><a href="/enduser">Nurses</a></li>
-                <li><a href="/search/?">Family</a></li>
+                <li><a href="/search">Family</a></li>
                 <li><a href="/team">Team</a></li>
                 <% if session[:sid] %>
                   <li><a href="/logout">Logout</a></li>
